testsuite/positive/lambda-caching.n
using System.Console;

module Test1
{
  public GetFunction() : int -> string
  {
    x => x.ToString()
  }
}

module Test2[T]
{
  public GetFunction() : T -> string
  {
    x => x.ToString()
  }
}

module Test3
{
  public GetFunction[T]() : T -> string
  {
    x => x.ToString()
  }
}

module Program
{
  Test(f1 : int -> string, f2 : int -> string) : void
  {
    WriteLine(f1(1) == f2(1));
    WriteLine(ReferenceEquals(f1, f2))
  }

  Main() : void
  {
    Test(Test1.GetFunction(), Test1.GetFunction()); 
    Test(Test2.[int].GetFunction(), Test2.[int].GetFunction()); 
    Test(Test3.GetFunction.[int](), Test3.GetFunction.[int]());
  }
}
/*
BEGIN-OUTPUT
True
True
True
True
True
True
END-OUTPUT
*/