testsuite/negative/comp-branch.n
using System;
using System.Console;

module Program
{
  Main() : void
  {
    f1();
    f2();
    f3();
    f4();
    f5();
  }

  f1() : void
  {
    mutable x = 3;
    if (3 > 4)
      x = 3
    else
      true; // W: ignored computed value of type bool
  }

  f2() : void
  {
    if (Environment.ProcessorCount > 0)
      ReadLine(); // W: ignored computed value of type string
    else
      WriteLine();

    _ = ReadLine();
  }

  f3() : void
  {
    if (Environment.ProcessorCount > 0)
      WriteLine();
    else
      ReadLine(); // W: ignored computed value of type string

    _ = ReadLine();
  }

  f4() : void
  {
    if (Environment.ProcessorCount > 0)
      ReadLine(); // W: ignored computed value of type string
    else
      WriteLine();
  }

  f5() : void
  {
      def bul = System.Text.StringBuilder("");

      if (true)
        bul.Append(""); // W: ignored computed value
      else
        _ = bul.Append("");

      foreach (x in array[1,2,3])
        bul.Append(x.ToString()); // W: ignored computed value
  }
}

